erDiagram
    User {
        string id PK
        string email UK
        string password_hash
        blob signature_image
        string signature_filename
        string signature_content_type
        datetime created_at
        datetime updated_at
    }

    Portfolio {
        string id PK
        string user_id FK
        json personal_information
        json career_summary
        json skills
        json work_experience
        json education
        json projects
        json awards
        json publications
        json certifications
        json languages
        datetime created_at
        datetime updated_at
    }

    Resume {
        string id PK
        string user_id FK
        string company_name
        string job_title
        text job_description
        text personal_information
        text career_summary
        text skills
        text work_experience
        text education
        text projects
        text awards
        text publications
        string model_type
        string model_name
        float temperature
        blob resume_pdf
        text cover_letter_content
        blob cover_letter_pdf
        datetime created_at
        datetime updated_at
    }

    Preamble {
        string id PK
        string name UK
        string type
        text content
        datetime created_at
        datetime updated_at
    }

    User ||--o{ Portfolio : has
    User ||--o{ Resume : creates
    Portfolio ||--o{ Resume : used_by
    Resume ||--|| Preamble : uses
